--- a/src/Templates/footer.html
+++ b/src/Templates/footer.html
@@ -1,4 +1,4 @@
-            <!---end content (see header.html)--->
+            <!-- end content (see header.html) -->
         </div>
 
     </section>
