--- a/src/Templates/header.html
+++ b/src/Templates/header.html
@@ -52,4 +52,4 @@
         </div>
 
         <div class="hero-body">
-            <!---begin content (see footer.html)--->
+            <!-- begin content (see footer.html) -->
